@@ -1,6 +1,7 @@
 package com.club.match.Domain.Service;
 
 import com.club.match.Domain.DTO.AttachmentFileDTO;
+import com.club.match.Domain.DTO.TempFileDTO;
 import com.club.match.Mapper.FileMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,9 +19,9 @@ import java.time.format.DateTimeFormatter;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -30,22 +31,22 @@ public class FileService {
 
     // 임시 파일 디렉토리
     @Value("${server.url}")
-    private String BASE_URL;
+    private String BASE_URL; //localhost:8100
 
     // 최종 저장 디렉토리
     private final String BASE_UPLOAD_ROOT_DIR = "src/main/resources/Users/";
 
-
+    // 글쓰기 시 임시 업로드용
     @Transactional(rollbackFor = Exception.class)
-    public Map<String, Object> uploadFile(MultipartFile file, String userId, Long tempPostId) {
+    public Map<String, Object> uploadFile(MultipartFile file, String userId) {
         Map<String, Object> resp = new HashMap<>();
         String originalFileName = file.getOriginalFilename();
-        String fileExtension = originalFileName.substring(originalFileName.lastIndexOf("."));
+        String fileExtension = Objects.requireNonNull(originalFileName).substring(originalFileName.lastIndexOf("."));
         String newFileName = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMddHHmmssSSS")) + fileExtension;
         String contentType = file.getContentType();
 
         // 임시 파일 경로
-        Path tempUploadPath = Paths.get(BASE_UPLOAD_ROOT_DIR, userId, "community", String.valueOf(tempPostId));
+        Path tempUploadPath = Paths.get(BASE_UPLOAD_ROOT_DIR, userId, "community", "temp");
         Path filePath = tempUploadPath.resolve(newFileName);
 
         try {
@@ -55,25 +56,24 @@ public class FileService {
             file.transferTo(filePath);
 
             // DB에 파일 정보 저장
-            AttachmentFileDTO attachmentFileDTO = new AttachmentFileDTO();
-            attachmentFileDTO.setPostId(tempPostId);
-            attachmentFileDTO.setAttachmentUrl(BASE_URL + "/" + userId + "/community/" + tempPostId + "/" + newFileName);
-            attachmentFileDTO.setOriginalFileName(originalFileName);
-            attachmentFileDTO.setContentType(contentType);
+            TempFileDTO tempFileDTO = new TempFileDTO();
+            tempFileDTO.setAttachmentUrl(BASE_URL + "/" + userId + "/community/" + "temp/" + newFileName);
+            tempFileDTO.setOriginalFileName(originalFileName);
+            tempFileDTO.setContentType(contentType);
 
-            int rowsAffected = fileMapper.uploadFile(attachmentFileDTO);
-            if (rowsAffected > 0) {
+            int tempFileInfo = fileMapper.uploadTempFile(tempFileDTO);
+            if (tempFileInfo > 0) {
                 resp.put("success", true);
                 resp.put("message", "파일 정보가 성공적으로 저장되었습니다.");
-                resp.put("fileUrl", attachmentFileDTO.getAttachmentUrl());
-                resp.put("postAttachmentId", attachmentFileDTO.getPostAttachmentId()); // 생성된 ID 반환
+                resp.put("fileName", tempFileDTO.getOriginalFileName());
+                resp.put("fileUrl", tempFileDTO.getAttachmentUrl());
             } else {
                 Files.deleteIfExists(filePath); // DB 저장 실패 시 파일 시스템에 저장된 파일 롤백
                 resp.put("success", false);
                 resp.put("message", "파일 정보 저장에 실패했습니다.");
             }
         } catch (IOException e) {
-            log.error("파일 업로드 실패 (userId: {}, tempPostId: {}): {}", userId, tempPostId, e.getMessage(), e);
+            log.error("파일 업로드 실패 (userId: {}, message: {})", userId, e.getMessage());
             resp.put("success", false);
             resp.put("message", "파일 업로드 중 오류가 발생했습니다: " + e.getMessage());
         } catch (Exception e) {
@@ -84,31 +84,32 @@ public class FileService {
         return resp;
     }
 
-    // 2. 게시글 저장 시 임시 파일들을 실제 게시글로 이동
+    // 게시글 저장 시 임시 파일들을 실제 게시글로 이동
     @Transactional(rollbackFor = Exception.class)
-    public Map<String, Object> confirmAndMoveFiles(String userId, Long actualPostId, Long tempPostId, String editorContent) {
+    public Map<String, Object> confirmAndMoveFiles(String userId, String editorContent) {
         Map<String, Object> resp = new HashMap<>();
         try {
             // 1. 임시 postId로 DB에 저장된 모든 파일 목록을 조회
-            List<AttachmentFileDTO> tempFiles = fileMapper.selectFilesByPostId(tempPostId);
+            List<AttachmentFileDTO> tempFiles = fileMapper.selectTempFile();
             if (tempFiles.isEmpty()) {
                 // 임시 디렉토리가 아예 비어있었다면 삭제 시도
-                Path tempPostIdDir = Paths.get(BASE_UPLOAD_ROOT_DIR, userId, "community", String.valueOf(tempPostId));
+                Path tempPostIdDir = Paths.get(BASE_UPLOAD_ROOT_DIR, userId, "community", "temp");
                 deleteDirectoryIfEmpty(tempPostIdDir);
                 resp.put("success", true);
                 resp.put("message", "이동할 임시 파일이 없습니다.");
+                resp.put("ac")
                 return resp;
             }
 
-            // 에디터 내용에서 사용된 이미지 URL 추출 (정규식 사용)
-            // http://localhost:3000/community/temp/{userId}/{tempPostId}/{filename}
-            String regex = Pattern.quote(BASE_URL + "/" + userId + "/community/" + tempPostId + "/") + "([^/]+)";
+            // 에디터 내용에서 사용된 URL 추출 (정규식 사용)
+            // http://localhost:3000/community/temp/
+            String regex = Pattern.quote(BASE_URL + "/community" +  "/temp/") + "([^/]+)";
             Pattern pattern = Pattern.compile(regex);
             Matcher matcher = pattern.matcher(editorContent);
 
             List<String> usedFileNames = matcher.results()
                     .map(match -> match.group(1))
-                    .collect(Collectors.toList());
+                    .toList();
 
             // 2. 각 임시 파일을 실제 게시글 디렉토리로 이동하고 DB 업데이트
             for (AttachmentFileDTO tempFile : tempFiles) {
@@ -116,8 +117,8 @@ public class FileService {
 
                 if (usedFileNames.contains(fileName)) {
                     // 에디터 내용에 포함된 파일만 이동
-                    Path sourcePath = Paths.get(BASE_UPLOAD_ROOT_DIR, userId, "community", String.valueOf(tempPostId), fileName);
-                    Path targetDirectory = Paths.get(BASE_UPLOAD_ROOT_DIR, userId, "community", String.valueOf(actualPostId));
+                    Path sourcePath = Paths.get(BASE_UPLOAD_ROOT_DIR, userId, "community", "temp", fileName);
+                    Path targetDirectory = Paths.get(BASE_UPLOAD_ROOT_DIR, userId, "community","temp");
                     Path targetPath = targetDirectory.resolve(fileName);
 
                     Files.createDirectories(targetDirectory); // 대상 디렉토리 생성
